<resources>
    <string name="app_name">Quiz Master</string>
    <string name="category">Category</string>
    <string name="score">%s/%s</string>
    <string name="quiz">Cow jump over the moon Cow jump over the moon Cow jump over the moon</string>
    <string name="share">Share</string>
    <string name="restart">Restart</string>
    <string name="settings">Settings</string>
    <string name="send_to">Share with…</string>
    <string name="difficulty">Difficulty</string>
    <string name="save_setting">Continue</string>
    <string name="game_level">GAME_LEVEL</string>
    <string name="game_level_default">2</string>
    <string name="game_category">GAME_CATEGORY</string>
    <string name="game_category_default">0</string>
    <string name="preference_file_key">info.rohanmorris.quizmaster.settings</string>
    <string name="error">Error</string>
    <string name="error_connecting">Error connecting to server, check your internet connection and try again.</string>
    <string name="game_amonut">GAME_AMOUNT</string>
    <string name="game_amonut_default">10</string>
    <string name="responce_code_1">Not enough question for\nthis category and level,\nplease select another.</string>
    <string name="banner_ad_unit_id">ca-app-pub-9222115009045453/9043644250</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_id">ca-app-pub-9222115009045453~7511070734</string>
</resources>