<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/result_padt"
    android:paddingLeft="@dimen/result_padl"
    android:paddingRight="@dimen/result_padr"
    android:paddingBottom="@dimen/result_padb"
    android:paddingStart="@dimen/result_padl"
    android:paddingEnd="@dimen/result_padr"
    android:background="#2B60DE"
    tools:context="info.rohanmorris.quizmaster.ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/quiz_question"
            style="@style/quiz_question"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="#fff"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img"
                android:src="@drawable/gold"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_below="@id/text1"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/score" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/img"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@id/score"/>
        </RelativeLayout>

        <Button
            android:id="@+id/share"
            android:text="@string/share"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            style="@style/button"/>

        <Button
            android:id="@+id/restart"
            android:text="@string/restart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/button"/>

        <Button
            android:id="@+id/settings"
            android:text="@string/settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/button"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
